--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <br>
 <p> Hinata Shoyo adalah orang yang sangat suka bermain voli. <br>
 meskipun tubuhnya pendek, dia senantiasa berlatih dengan giat <br>
-peribadinya yang suka belajar hal baru dan menjadi sangat menarik perhatian banyak orang.<p>
+peribadinya yang suka belajar hal baru menjadi menarik perhatian banyak orang.<p>
 
 
 
